--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Around the Web</h4>
+                        <h4 class="text-uppercase mb-4">Around The Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/roshan.poudel.180"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/roshan-poudel031/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/ROSHAN0311"><i class="fab fa-fw fa-github"></i></a>
